@startuml
title View Map Points - Model Class Diagram

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundCorner 0
skinparam dpi 170
skinparam defaultFontName Arial
skinparam classFontName Arial
skinparam classAttributeFontName Consolas
skinparam classAttributeIconSize 0
skinparam classBorderColor #263238
skinparam classBackgroundColor #FAFCFD
skinparam classHeaderBackgroundColor #DCEEF8
skinparam ArrowColor #263238
skinparam ArrowThickness 1.2
skinparam linetype ortho
skinparam nodesep 160
skinparam ranksep 140
hide circle

class Attraction <<model>> {
  -id: String {UUID}
  -partnerId: String
  -title: String
  -city: String
  -latitude: Float [0..1]
  -longitude: Float [0..1]
  -status: AttractionStatus = DRAFT
  -publicationStatus: AttractionPublicationStatus = PAUSED
  --
  +isPublished(): Boolean
  +isOwnedBy(partnerId: String): Boolean
}

class AttractionImage <<model>> {
  -id: String {UUID}
  -attractionId: String
  -imageUrl: String
  -isPrimary: Boolean = false
  --
  +isPrimary(): Boolean
}

class TicketProduct <<model>> {
  -id: String {UUID}
  -attractionId: String
  -name: String
  -status: TicketStatus = ACTIVE
  -archivedAt: DateTime [0..1]
  --
  +isOnSale(): Boolean
}

Attraction "1" *-- "0..*" AttractionImage : images
Attraction "1" *-- "0..*" TicketProduct : ticketProducts

@enduml
